projects/batfish/src/test/resources/org/batfish/representation/aws/test-public-subnet/aws_configs/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0717a7a1008f8e90c",
     "NetworkAclId": "acl-0d9449710ec85473c",
     "SubnetId": "subnet-0bb82ae8b3ea5dc78"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-0d9449710ec85473c",
   "OwnerId": "554773406868",
   "Tags": [],
   "VpcId": "vpc-0672bce73895d7252"
  }
 ]
}
